# puzzlebot_ros2

./: README.md
install/: local_setup.sh  setup.sh
install/puzzlebot_description/share/puzzlebot_description/: package.ps1  package.sh
install/puzzlebot_gazebo/share/puzzlebot_gazebo/: local_setup.sh  package.ps1  package.sh
install/puzzlebot_gazebo/share/puzzlebot_gazebo/launch/: puzzlebot_gazebo.launch.xml
install/puzzlebot_navigation2/share/ament_index/resource_index/parent_prefix_path/: puzzlebot_navigation2
install/puzzlebot_navigation2/share/puzzlebot_navigation2/: local_setup.sh  package.ps1  package.sh
install/puzzlebot_navigation2/share/puzzlebot_navigation2/launch/: nav2.launch.xml  slam.launch.xml  slam_core.launch.xml
log/: latest_build
puzzlebot_description/: CMakeLists.txt  package.xml  setup.py
puzzlebot_description/launch/: <launch>  puzzlebot_description.launch.py  puzzlebot_description.launch.xml
puzzlebot_description/urdf/: nav2_rpp_controller_example.yaml  puzzlebot.urdf  puzzlebot.urdf.xacro  puzzlebot.xacro  puzzlebot_control.xacro  sensor.xacro  sensor_properties.xacro
puzzlebot_gazebo/: CMakeLists.txt  package.xml
puzzlebot_gazebo/config/: gazebo_bridge.yaml
puzzlebot_gazebo/launch/: <launch>  puzzlebot_gazebo.launch.xml
puzzlebot_gazebo/worlds/: maze.world
puzzlebot_navigation/: CMakeLists.txt  package.xml
puzzlebot_navigation/config/: nav2_params.yaml  slam_toolbox.yaml
puzzlebot_navigation/launch/: nav2.launch.xml  nav2_core.launch.xml  slam.launch.xml  slam_core.launch.xml
puzzlebot_navigation/maps/: map_maze.pgm  map_maze.yaml  my_map.pgm  my_map.yaml
puzzlebot_navigation/rviz/: nav2.rviz  slam.rviz
puzzlebot_real_robot/: CMakeLists.txt  package.xml
puzzlebot_real_robot/config/: nav2_params_real.yaml  slam_toolbox_real.yalm  slam_toolbox_real.yaml
puzzlebot_real_robot/launch/: nav2_real.launch.xml  real_robot_core.launch.xml  slam_real.launch.xml
puzzlebot_real_robot/maps/: my_map.pgm  my_map.yaml
puzzlebot_real_robot/scripts/: puzzlebot_joint_state_publisher.py  puzzlebot_localization.py
src/puzzlebot_description/: package.xml
src/puzzlebot_description/launch/: puzzlebot_description.launch.xml
src/puzzlebot_description/rviz/: puzzlebot_description.rviz
src/puzzlebot_description/urdf/: puzzlebot.urdf  puzzlebot_control.xacro
src/puzzlebot_gazebo/config/: gazebo_bridge.yaml
src/puzzlebot_navigation/: CMakeLists.txt
src/puzzlebot_navigation/config/: nav2_params.yaml  slam_toolbox.yaml
src/puzzlebot_navigation/launch/: nav2.launch.xml  slam.launch.xml
src/puzzlebot_navigation/maps/: my_map.yaml
src/puzzlebot_navigation/rviz/: nav2.rviz  slam.rviz
