<?xml version="1.0"?>
<!-- GENERADO CON CLAUDE REMPLAZAR CON ARCHIVOS PROPIOS -->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puzzlebot_navigation</name>
  <version>0.0.1</version>
  <description>Navigation stack for Puzzlebot including SLAM and Nav2 configuration</description>
  <maintainer email="team@example.com">Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>nav2_common</build_depend>
  <build_depend>slam_toolbox</build_depend>
  <build_depend>nav2_bringup</build_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
