<package format="3">
    <name>puzzlebot_navigation2</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="ppangelhr@gmail.com">peps</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>nav2_bringup</exec_depend>
    <exec_depend>ros_gz_sim</exec_depend>
    <exec_depend>ros_gz_bridge</exec_depend>
    <exec_depend>puzzlebot_gazebo</exec_depend>
    <exec_depend>puzzlebot_description</exec_depend>
    <exec_depend>slam_toolbox</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>teleop_twist_keyboard</exec_depend>


    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>